chore(demos): replace bower resources

--- a/demos/data-source/odata.html
+++ b/demos/data-source/odata.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>OData Sample - OData with Data Source Control - Ignite UI™</title>
+    <title>OData Sample - OData with Data Source Control - Ignite UIï¿½</title>
     <style type="text/css">
         .standard-grid { width:100%; border-top:1px solid #b1b1b1; border-right:1px solid #b1b1b1; border-spacing: 0;}
         .standard-grid th, .standard-grid td { text-align:left; border-bottom:1px solid #b1b1b1; border-left:1px solid #b1b1b1; padding:4px;}
@@ -12,8 +12,8 @@
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
