--- a/demos/editors/credit.html
+++ b/demos/editors/credit.html
@@ -7,8 +7,8 @@
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
@@ -309,16 +309,16 @@
 
             switch (selectedCurrency) {
                 case "EUR":
-                    currencySymbol = "€";
+                    currencySymbol = "ï¿½";
                     break;
                 case "USD":
                     currencySymbol = "$";
                     break;
                 case "GBP":
-                    currencySymbol = "£";
+                    currencySymbol = "ï¿½";
                     break;
                 default:
-                    currencySymbol = "€";
+                    currencySymbol = "ï¿½";
             }
             $("#resultCredit").igCurrencyEditor("option", "currencySymbol", currencySymbol);
             $("#resultCredit").igCurrencyEditor("option", "value", creditAmound);
