--- a/demos/editors/numeric-editor.html
+++ b/demos/editors/numeric-editor.html
@@ -63,8 +63,8 @@
     </style>
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
