--- a/demos/file-upload/multiple-upload.html
+++ b/demos/file-upload/multiple-upload.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Multiple Upload Sample - Multiple Upload with File Upload Control - Ignite UI™</title>
+    <title>Multiple Upload Sample - Multiple Upload with File Upload Control - Ignite UIï¿½</title>
 
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
