--- a/demos/loader/dynamic-download.html
+++ b/demos/loader/dynamic-download.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Dynamic Download Sample - Dynamic Download with Infragistics Loader Control - Ignite UI™</title>
+    <title>Dynamic Download Sample - Dynamic Download with Infragistics Loader Control - Ignite UIï¿½</title>
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Loader JavaScript File -->
     <script src="../../dist/js/infragistics.loader.js" type="text/javascript"></script>
