--- a/demos/splitter/api-events-splitter.html
+++ b/demos/splitter/api-events-splitter.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Splitter API and Events Sample - Splitter API and Events with Splitter Control - Ignite UI™</title>
+    <title>Splitter API and Events Sample - Splitter API and Events with Splitter Control - Ignite UIï¿½</title>
 
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
@@ -11,8 +11,8 @@
     <link href="../apiviewer/apiviewer.css" rel="stylesheet" type="text/css">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
