--- a/demos/tile-manager/leading-tile.html
+++ b/demos/tile-manager/leading-tile.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Leading Tile Configuration Sample - Leading Tile Configuration with Tile Manager Control - Ignite UI™</title>
+    <title>Leading Tile Configuration Sample - Leading Tile Configuration with Tile Manager Control - Ignite UIï¿½</title>
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <!-- Modernizr/jQuery/jQuery UI -->
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
@@ -69,7 +69,7 @@
                 }
 
                     .dashboard div ul li:nth-child(n+2):before {
-                        content: "• ";
+                        content: "ï¿½ ";
                         color: #2cbdf9; 
                     }
 
@@ -317,7 +317,7 @@
                     <li>0-100 in 4.0 seconds</li>
                     <li>G-meter measures lateral acceleration</li>
                 </ul>
-                <!--<p>The 2013 Cadillac CST-V Coupe, it’s pure adrenaline on wheels. From the world’s fastest family of production cars comes a coupe that satisfies more than just driving enthusiasts, it inspires true automotive fanatics. A complete package of performance, styling and capability is achieved through the 556 HP V8 engine, the aggressive styling of its aerodynamic physique and the constant traction of revolutionary dual-mode Magnetic Ride Control, which reads the road up to 1,000 times per second.</p>-->
+                <!--<p>The 2013 Cadillac CST-V Coupe, itï¿½s pure adrenaline on wheels. From the worldï¿½s fastest family of production cars comes a coupe that satisfies more than just driving enthusiasts, it inspires true automotive fanatics. A complete package of performance, styling and capability is achieved through the 556 HP V8 engine, the aggressive styling of its aerodynamic physique and the constant traction of revolutionary dual-mode Magnetic Ride Control, which reads the road up to 1,000 times per second.</p>-->
             </div>
             <div>
                 <figure>
