--- a/demos/video-player/commercials-support.html
+++ b/demos/video-player/commercials-support.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Commercials Support Sample - Commercials Support with Video Player Control - Ignite UI™</title>
+    <title>Commercials Support Sample - Commercials Support with Video Player Control - Ignite UIï¿½</title>
 
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
@@ -18,8 +18,8 @@
     </style>
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
