--- a/demos/editors/basic-usage.html
+++ b/demos/editors/basic-usage.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Basic Usage Sample - Basic Usage with Editors Control - Ignite UI™</title>
+    <title>Basic Usage Sample - Basic Usage with Editors Control - Ignite UIï¿½</title>
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
@@ -229,7 +229,7 @@
         $('#price').igCurrencyEditor({
             value: "79",
             minValue : 0,
-            currencySymbol: "€"
+            currencySymbol: "â‚¬"
         });
         $('#amount').igNumericEditor({
             dataMode: "int",
@@ -259,7 +259,7 @@
             if (radioMetric.checked) {
                 var imperialPrice = $('#price').igCurrencyEditor("option", "value");
                 //Change the currency symbol to Euros
-                $('#price').igCurrencyEditor("option", "currencySymbol", "€");
+                $('#price').igCurrencyEditor("option", "currencySymbol", "ï¿½");
                 //Calculate the price in Euros
                 $('#price').igCurrencyEditor("option", "value", calculateNewPrice(imperialPrice));
                 //Update labels to Metric units
