--- a/demos/editors/bind-editors-with-ko.html
+++ b/demos/editors/bind-editors-with-ko.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>KnockoutJS Binding Sample - KnockoutJS Binding with Editors Control - Ignite UI™</title>
+    <title>KnockoutJS Binding Sample - KnockoutJS Binding with Editors Control - Ignite UIï¿½</title>
 
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script type="text/javascript" src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script type="text/javascript" src="../../dist/js/infragistics.core-lite.js"></script>
     <script type="text/javascript" src="../../dist/js/infragistics.lob-lite.js"></script>
 
-    <script type="text/javascript" src="../../bower_components/knockout/dist/knockout.js"></script>
-    <script type="text/javascript" src="../../bower_components/knockout.mapping/knockout.mapping.js"></script>
+    <script type="text/javascript" src="../../node_modules/knockout/build/output/knockout-latest.js"></script>
     <script type="text/javascript" src="../../dist/js/extensions/infragistics.ui.editors.knockout-extensions.js"></script>
 </head>
 <body><p><b>Note: </b>The Knockout extensions do not work with the ASP.NET MVC Helpers.<br>            This sample demonstrates how to instantiate and bind Ignite UI editor controls to data using KnockoutJS data bindings.</p>
