--- a/demos/editors/mask-editor-basic.html
+++ b/demos/editors/mask-editor-basic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mask Editor Basic Sample Sample - Mask Editor Basic Sample with Editors Control - Ignite UI™</title>
+    <title>Mask Editor Basic Sample Sample - Mask Editor Basic Sample with Editors Control - Ignite UIï¿½</title>
     <meta charset="utf-8">
 
     <!-- Ignite UI Required Combined CSS Files -->
@@ -30,8 +30,8 @@
     </style>
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
