--- a/demos/editors/time-picker.html
+++ b/demos/editors/time-picker.html
@@ -44,9 +44,9 @@
         }
     </style>
 
-    <script src="../../js/modernizr.min.js"></script>
-    <script src="../../js/jquery.min.js"></script>
-    <script src="../../js/jquery-ui.min.js"></script>
+    <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../igniteui/js/infragistics.core.js"></script>
