--- a/demos/tile-manager/collapsible-splitter.html
+++ b/demos/tile-manager/collapsible-splitter.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>Collapsible Splitter Sample - Collapsible Splitter with Tile Manager Control - Ignite UI™</title>
+    <title>Collapsible Splitter Sample - Collapsible Splitter with Tile Manager Control - Ignite UIï¿½</title>
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <!-- Modernizr/jQuery/jQuery UI -->
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="../data-files/js-controls.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
