--- a/demos/tree/bind-tree-with-ko.html
+++ b/demos/tree/bind-tree-with-ko.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>KnockoutJS Binding Sample - KnockoutJS Binding with Tree Control - Ignite UI™</title>
+    <title>KnockoutJS Binding Sample - KnockoutJS Binding with Tree Control - Ignite UIï¿½</title>
 
     <!-- Ignite UI Required Combined CSS Files -->
     <link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
     <link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
     <script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-    <script src="../../bower_components/jquery/dist/jquery.js"></script>
-    <script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="../../node_modules/jquery/dist/jquery.js"></script>
+    <script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
     <!-- Ignite UI Required Combined JavaScript Files -->
     <script src="../../dist/js/infragistics.core-lite.js"></script>
@@ -17,8 +17,8 @@
 
 </head>
 <body><p><b>Note: </b>The Knockout extensions do not work with the ASP.NET MVC Helpers.<br>       This sample demonstrates how to bind igTree to hierarchical data managed by KnockoutJS data bindings.</p>
-    <script src="../../bower_components/knockout/dist/knockout.js" type="text/javascript"></script>
-    <script src="../../bower_components/knockout.mapping/knockout.mapping.js" type="text/javascript"></script>
+    <script src="../../node_modules/knockout/build/output/knockout-latest.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout.mapping/2.4.1/knockout.mapping.min.js" type="text/javascript"></script>
     <script src="../../dist/js/extensions/infragistics.ui.tree.knockout-extensions.js"></script>
     <script src="../../dist/js/extensions/infragistics.ui.editors.knockout-extensions.js"></script>
 
