--- a/demos/validator/basic-usage.html
+++ b/demos/validator/basic-usage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Basic Usage Sample - Basic Usage with Validator Control - Ignite UI™</title>    
+    <title>Basic Usage Sample - Basic Usage with Validator Control - Ignite UIï¿½</title>    
 	<!--Ignite UI Required Combined CSS Files-->
 	<link href="../../dist/css/themes/infragistics/infragistics.theme.css" rel="stylesheet">
 	<link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
@@ -106,8 +106,8 @@
         }
     </style>
 	<script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-	<script src="../../bower_components/jquery/dist/jquery.js"></script>
-	<script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script src="../../node_modules/jquery/dist/jquery.js"></script>
+	<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
 	<!--Ignite UI Required Combined JavaScript Files-->
 	<script src="../../dist/js/infragistics.core-lite.js"></script>
