--- a/demos/zoombar/zoombar-chartjs.html
+++ b/demos/zoombar/zoombar-chartjs.html
@@ -8,8 +8,8 @@
 	<link href="../../dist/css/structure/infragistics.css" rel="stylesheet">
 
 	<script src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-2.8.3.js"></script>
-	<script src="../../bower_components/jquery/dist/jquery.js"></script>
-	<script src="../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script src="../../node_modules/jquery/dist/jquery.js"></script>
+	<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js"></script>
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.6/Chart.bundle.js"></script>
