test: cleanup/replace bower resources in html files

--- a/tests/unit/combo/filtering/tests.html
+++ b/tests/unit/combo/filtering/tests.html
@@ -8,11 +8,11 @@
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.validator.css" rel="stylesheet" />
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.popover.css" rel="stylesheet" />
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.notifier.css" rel="stylesheet" />
-    <link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+    <link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 
-    <script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
-    <script type="text/javascript" src="../../../../bower_components/jquery-mockjax/src/jquery.mockjax.js"></script>
+    <script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../../../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
     <script type="text/javascript" src="../../../../tests/unit/common/test-util.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
@@ -30,7 +30,7 @@
     <script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.popover-en.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.validator-en.js"></script>
 
-    <script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+    <script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
     <script type="text/javascript" src="filtering-test.js"></script>
 </head>
 <body>
