--- a/tests/unit/knockout/tree/tests.html
+++ b/tests/unit/knockout/tree/tests.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
-	<link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<link type="text/css" href="../../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.tree.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
 	
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/knockout/dist/knockout.debug.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
     
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
