--- a/tests/unit/loader/tests.html
+++ b/tests/unit/loader/tests.html
@@ -5,12 +5,12 @@
 
 	<title>Infragistics jQuery Client Loader QUnit tests</title>
 
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 
-	<script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
-	<script type="text/javascript" src="../../../bower_components/qunit/qunit/qunit.js"></script>
-	<script type="text/javascript" src="../../../bower_components/knockout/dist/knockout.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script type="text/javascript" src="../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
 	<!--The control source is instrumented and used by the Istnabul to generated code coverage.
 	To update the instrumented files with latest, go to Build/JavaScript and run 'grunt instrument'. -->
 	<!--<script type="text/javascript" src="../../../Source/ClientUI/js/infragistics.loader.js"></script>-->
