--- a/tests/unit/rating/common/tests.html
+++ b/tests/unit/rating/common/tests.html
@@ -6,8 +6,8 @@
 	<title>Infragistics jQuery Client Rating - common example </title>
 	<link id="Link1" type="text/css" href="../../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.rating.css" rel="stylesheet" />
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.widget.js"></script>
@@ -15,8 +15,8 @@
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.rating-en.js"></script>
 	<script type="text/javascript" src="../../common/test-util.js"></script>
 
-	<link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+	<link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
 
 	<script type="text/javascript" src="rating-test.js"></script>
 </head>
