--- a/tests/unit/splitter/tests.html
+++ b/tests/unit/splitter/tests.html
@@ -9,9 +9,8 @@
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
 
 
-	<script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-tmpl/jquery.tmpl.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.splitter-en.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
@@ -19,8 +18,8 @@
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.widget.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.splitter.js"></script>
 	<script type="text/javascript" src="jquery.simulate.js"></script>
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../bower_components/qunit/qunit/qunit.js"></script>
+	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
 	<script type="text/javascript" src="../common/test-util.js"></script>
 
 	<script type="text/javascript" src="splitter-test.js"></script>
