--- a/tests/unit/templating/tests.html
+++ b/tests/unit/templating/tests.html
@@ -3,16 +3,15 @@
 
 <head>
 	<title>igTemplating Engine - Unit Testing</title>
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 
-	<script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.templating-en.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.templating.js"></script>
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../bower_components/qunit/qunit/qunit.js"></script>
+	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
 	<script type="text/javascript" src="../common/test-util.js"></script>
 	<script type="text/javascript" src="DB3.js"></script>
 	<script type="text/javascript" src="templating-test.js"></script>
