--- a/tests/unit/colorpickersplitbutton/tests.html
+++ b/tests/unit/colorpickersplitbutton/tests.html
@@ -12,7 +12,7 @@
 	
 	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
 
     <script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
