--- a/tests/unit/dataSource/remote/tests.html
+++ b/tests/unit/dataSource/remote/tests.html
@@ -2,18 +2,17 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title> Infragistics jQuery Data Source - tests for Remote operations & mocked AJAX requests to REST services </title>
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.dataSource-en.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.datasource.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/JSON-js/json2.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-mockjax/src/jquery.mockjax.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/xmldom/dom.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-tmpl/jquery.tmpl.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
 
-	<link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+	<link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script src="../../common/test-util.js"></script>
+	<script src="remote-test.js"></script>
 
 	<script id="template1" type="text/x-jquery-tmpl">
 		<li> ${ProductID} </li>
