--- a/tests/unit/knockout/combo/tests.html
+++ b/tests/unit/knockout/combo/tests.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset="UTF-8" />
 	<title>Infragistics jQuery Client Editors - List items example </title>
-	<link type="text/css" href="../../../../bower_components/jquery-ui/themes/base/jquery-ui.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.combo.css" rel="stylesheet" />
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/knockout/dist/knockout.debug.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/knockout.mapping/knockout.mapping.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/knockout/build/output/knockout-latest.debug.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.datasource-en.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.combo-en.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
@@ -20,16 +18,20 @@
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.combo.js"></script>
 
 	<script type="text/javascript" src="../../../../src/js/extensions/infragistics.ui.combo.knockout-extensions.js"></script>
-	<link type="text/css" rel="stylesheet" href="../../../../bower_components/qunit/qunit/qunit.css" media="screen" />
-	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+	<link type="text/css" rel="stylesheet" href="../../../../node_modules/qunitjs/qunit/qunit.css" media="screen" />
+	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script src="../../common/test-util.js"></script>
 	<script type="text/javascript" src="combo-test.js"></script>
 </head>
 <body>
-<div style="float:right;width:400px;overflow:auto">
-	 <h1 id="qunit-header">Test results</h1>
-	 <h2 id="qunit-banner"></h2>
-	 <h2 id="qunit-userAgent"></h2>
-	 <ol id="qunit-tests"></ol>
-</div>
+	<!-- <div id="qunit"></div> -->
+	<div id="qunit-fixture"></div>
+		
+	<div style="float:right;width:400px;overflow:auto;">
+		<h1 id="qunit-header">Test results</h1>
+		<h2 id="qunit-banner"></h2>
+		<h2 id="qunit-userAgent"></h2>
+		<ol id="qunit-tests"></ol>
+	</div>
 </body>
 </html>
