--- a/tests/unit/knockout/editors/igNumericEditor/tests.html
+++ b/tests/unit/knockout/editors/igNumericEditor/tests.html
@@ -10,8 +10,8 @@
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.combo.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.editors.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../../src/css/structure/modules/infragistics.ui.validator.css" rel="stylesheet" />
-	<script type="text/javascript" src="../../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	
 	<script type="text/javascript" src="../../../../../src/js/modules/i18n/infragistics.ui.popover-en.js"></script>
 	<script type="text/javascript" src="../../../../../src/js/modules/i18n/infragistics.ui.notifier-en.js"></script>
@@ -33,9 +33,9 @@
 	<script type="text/javascript" src="../../../../../src/js/modules/infragistics.ui.editors.js"></script>
 
 	
-	<link type="text/css" href="../../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../../../bower_components/qunit/qunit/qunit.js"></script>
-	<script type='text/javascript' src='../../../../../bower_components/knockout/dist/knockout.debug.js'></script>
+	<link type="text/css" href="../../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script type='text/javascript' src='../../../../../node_modules/knockout/build/output/knockout-latest.debug.js'></script>
 
 	<script type="text/javascript" src="../../../../../src/js/extensions/infragistics.ui.editors.knockout-extensions.js"></script>
 	
