--- a/tests/unit/scroll/navigation/tests.html
+++ b/tests/unit/scroll/navigation/tests.html
@@ -7,9 +7,9 @@
 	<link type="text/css" href="../../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.scroll.css" rel="stylesheet" />
 
-	<script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-tmpl/jquery.tmpl.js"></script>
-	<script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
@@ -18,8 +18,8 @@
 	<script type="text/javascript" src="../jquery.simulate.js"></script>
 	<script type="text/javascript" src="../simInteractions.js"></script>
 
-	<link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
-	<script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+	<link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
 	<script type="text/javascript" src="../../common/test-util.js"></script>
 	<script type="text/javascript" src="navigation-test.js"></script>
 	<script type="text/javascript" src="../../testswarm/inject.js"></script>
