--- a/tests/unit/tilemanager/tilemanager/tests.html
+++ b/tests/unit/tilemanager/tilemanager/tests.html
@@ -5,10 +5,10 @@
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.layout.css" rel="stylesheet" />
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.tilemanager.css" rel="stylesheet" />
     <link type="text/css" href="../../../../src/css/structure/modules/infragistics.ui.splitter.css" rel="stylesheet" />
-    <link type="text/css" href="../../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+    <link type="text/css" href="../../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
     
-    <script type="text/javascript" src="../../../../bower_components/jquery/dist/jquery.js"></script>
-    <script type="text/javascript" src="../../../../bower_components/jquery-ui/jquery-ui.js"></script>
+    <script type="text/javascript" src="../../../../node_modules/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.splitter-en.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.util.jquery.js"></script>
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="../../../../src/js/modules/infragistics.ui.tilemanager.js"></script>
     <script type="text/javascript" src="../../../../src/js/modules/i18n/infragistics.ui.tilemanager-en.js"></script>
     
-    <script type="text/javascript" src="../../../../bower_components/qunit/qunit/qunit.js"></script>
+    <script type="text/javascript" src="../../../../node_modules/qunitjs/qunit/qunit.js"></script>
     <script type="text/javascript" src="../../common/test-util.js"></script>
     <script type="text/javascript" src="tilemanager-test.js"></script>
 </head>
