--- a/tests/unit/tree/tests.htm
+++ b/tests/unit/tree/tests.htm
@@ -4,10 +4,10 @@
 	<link type="text/css" href="../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.tree.css" rel="stylesheet" />
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	
-	<script type="text/javascript" src="../../../bower_components/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.templating.js"></script>
@@ -18,8 +18,8 @@
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.tree-en.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.tree.js"></script>
 	
-	<script type="text/javascript" src="../../../bower_components/qunit/qunit/qunit.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-mockjax/src/jquery.mockjax.js"></script>
+	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
+	<script type="text/javascript" src="../../../node_modules/jquery-mockjax/dist/jquery.mockjax.js"></script>
 	<script type="text/javascript" src="../common/test-util.js"></script>
 	
 	<style>
