--- a/tests/unit/zoombar/tests.html
+++ b/tests/unit/zoombar/tests.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<link type="text/css" href="../../../bower_components/qunit/qunit/qunit.css" rel="stylesheet" media="screen" />
+	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<link type="text/css" href="../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" /> 
 	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.html5.css" rel="stylesheet" />
@@ -10,7 +10,7 @@
 
 	<link type="text/css" href="../../../node_modules/qunitjs/qunit/qunit.css" rel="stylesheet" media="screen" />
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
-	<script type="text/javascript" src="../../../bower_components/jquery-ui/jquery-ui.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<script type="text/javascript" src="../../../node_modules/qunitjs/qunit/qunit.js"></script>
 
 	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.datasource-en.js"></script>
