test: misc test cases updates to restore lost covarage

--- a/tests/unit/dialog/tests.html
+++ b/tests/unit/dialog/tests.html
@@ -4,26 +4,19 @@
     <meta charset="UTF-8" />
 	<title>Infragistics jQuery Client Dialog </title>
 	<link type="text/css" href="../../../src/css/themes/infragistics/infragistics.theme.css" rel="stylesheet" />
-	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.popover.css" rel="stylesheet" />
-	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.notifier.css" rel="stylesheet" />
-	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.editors.css" rel="stylesheet" />
+	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.shared.css" rel="stylesheet" />
+	<link type="text/css" href="../../../src/css/structure/modules/infragistics.ui.dialog.css" rel="stylesheet" />
 
 	<script type="text/javascript" src="../../../node_modules/jquery/dist/jquery.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.popover-en.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.notifier-en.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.editors-en.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.popover-ja.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.notifier-ja.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.editors-ja.js"></script>
+	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.dialog-es.js"></script>
+	<script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.dialog-en.js"></script>
 
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.util.jquery.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.widget.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.popover.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.notifier.js"></script>
-	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.editors.js"></script>
+	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.dialog.js"></script>
 	<!-- <script type="text/javascript" src="../../../src/js/modules/i18n/regional/infragistics.ui.regional-i18n.js"></script> -->
 	<script type="text/javascript" src="../../../src/js/modules/i18n/regional/infragistics.ui.regional-ja.js"></script>
 	<script type="text/javascript" src="../../../src/js/modules/i18n/regional/infragistics.ui.regional-de.js"></script>
