--- a/tests/unit/toolbar/tests.html
+++ b/tests/unit/toolbar/tests.html
@@ -22,7 +22,8 @@
     <script type="text/javascript" src="../../../src/js/modules/infragistics.ui.toolbarbutton.js"></script>
     <script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.toolbar-en.js"></script>
     <script type="text/javascript" src="../../../src/js/modules/i18n/infragistics.ui.combo-en.js"></script>
-    <script type="text/javascript" src="../../../src/js/modules/infragistics.ui.toolbar.js"></script>
+	<script type="text/javascript" src="../../../src/js/modules/infragistics.ui.toolbar.js"></script>
+	<script src="../common/test-util.js"></script>
 	<script type="text/javascript" src="toolbar-test.js" ></script>
 </head>
 <body>
