test(igDatePicker): add just the test for #1733

--- a/tests/unit/editors/DatePickerBugs/tests.html
+++ b/tests/unit/editors/DatePickerBugs/tests.html
@@ -501,6 +501,52 @@
 					throw er;
 				});
 			});
+
+			testId = "Issue 1733 - igDatePicker throws error, when selecting with displayModeText dataMode";
+			test(testId, function (assert) {
+				assert.expect(4);
+				var done = assert.async(),
+					value = new Date(),
+					todayString, targetString,
+					$editor = $('<input/>').appendTo("#qunit-fixture2").igDatePicker({
+						dateInputFormat: "yyyy-MM-dd",
+						dataMode: "displayModeText"
+					}),
+					$calendar = $editor.igDatePicker("getCalendar");
+
+				value = new Date(value.getFullYear(), value.getMonth(), value.getDate());
+				todayString = getDDmmYYYY(value, "-").split("-").reverse().join("-");
+				
+
+				$editor.igDatePicker("field").focus();
+				$editor.igDatePicker("showDropDown");
+
+				$.ig.TestUtil.wait(400).then(function () {
+					// select today
+					$calendar.find(".ui-datepicker-today").find("a").click();
+					assert.equal($editor.val(), todayString, "Editor display text not updated with picked value");
+					assert.equal($editor.igDatePicker("value"), todayString, "Editor value not updated with picked one");
+
+					$editor.igDatePicker("showDropDown");
+					return $.ig.TestUtil.wait(400);
+					done();
+				})
+				.then(function () {
+					// select 15th or 16th depending on date
+					value.setDate(value.getDate() === 15 ? 16 : 15);
+					targetString = getDDmmYYYY(value, "-").split("-").reverse().join("-");
+
+					$calendar.find(".ui-datepicker-today").find("a").click();
+					assert.equal($editor.val(), todayString, "Editor display text not updated with picked value");
+					assert.equal($editor.igDatePicker("value"), todayString, "Editor value not updated with picked one");
+					done();
+				})	
+				.catch(function (er) {
+					assert.pushResult({ result: false, message: er.message });
+					done();
+					throw er;
+				});
+			});
 		});
 
 		function getDDmmYYYYHHSS(date) {
