--- a/tests/unit/editors/DatePickerBugs/tests.html
+++ b/tests/unit/editors/DatePickerBugs/tests.html
@@ -503,6 +503,45 @@
 				});
 			});
 
+			testId = "Issue 1453 pt2 - Enter date w/ format and displayModeText dataMode";
+			test(testId, function (assert) {
+				assert.expect(5);
+				var done = assert.async(),
+					today = target = new Date(),
+					targetString, targetKeys, tomorrow = true,
+					todayString = getDDmmYYYY(today, "-"),
+					$editor = $('<input/>').appendTo("#qunit-fixture2").igDatePicker({
+						dateInputFormat: "dd-MM-yyyy",
+						dataMode: "displayModeText"
+					}),
+					$calendar = $editor.igDatePicker("getCalendar");
+
+				targetKeys = todayString.replace(/-/g, "");
+
+				$editor.igDatePicker("field").focus();
+				$editor.igDatePicker("showDropDown");
+
+				$.ig.TestUtil.wait(400).then(function () {
+					// picker opens with today as default
+					strictEqual($calendar.find(".ui-datepicker-current-day").length, 0, "Calendar should have no initial selection");
+					//type in the date +/- a day, control check what's typed:
+					$.ig.TestUtil.type(targetKeys, $editor.igDatePicker("field"));
+					equal($editor.igDatePicker("field").val(), todayString, "Typed text should match");
+					equal($calendar.find(".ui-datepicker-current-day").text(), target.getDate(), "Calendar selection should be updated with typed in date");
+
+					$.ig.TestUtil.keyInteraction(13, $editor.igDatePicker("field"));
+					equal($editor.igDatePicker("field").val(), todayString, "Typed text should remain after enter");
+					equal($editor.igDatePicker("value"), todayString, "Value should match typed selection");
+
+					done();
+				}).catch(function (er) {
+					assert.pushResult({ result: false, message: er.message });
+					done();
+					throw er;
+				});
+			});
+
+
 			testId = "Issue 1733 - igDatePicker throws error, when selecting with displayModeText dataMode";
 			test(testId, function (assert) {
 				assert.expect(4);
