update charttype picker template

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -100,11 +100,14 @@
 	</div>
 </template>
 <template class='financialChartTypePicker'>
-		<select class='financialChartTypePicker'>
-		<option value='Auto'>Auto</option>
-		<option value='Bar'>Bar</option>
-		<option value='Line'>Line</option>
-		<option value='Candle'>Candle</option>
-		<option value='Column'>Column</option>
-	</select>
+	<button class='financialChartTypePickerDropDownButton'></button>
+	<div class='financialChartTypePickerDropDownMenu'>
+		<ul>
+			<li data-value='Auto'></li>
+			<li data-value='Bar'></li>
+			<li data-value='Line'></li>
+			<li data-value='Candle'></li>
+			<li data-value='Column'></li>
+		</ul>
+	</div>
 </template>
