display text next to chart type picker items

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -103,11 +103,11 @@
 	<button class='financialChartTypePickerDropDownButton'></button>
 	<div class='financialChartTypePickerDropDownMenu'>
 		<ul>
-			<li data-value='Auto'></li>
-			<li data-value='Bar'></li>
-			<li data-value='Line'></li>
-			<li data-value='Candle'></li>
-			<li data-value='Column'></li>
+			<li data-value='Auto'>Auto</li>
+			<li data-value='Bar'>Bar</li>
+			<li data-value='Line'>Line</li>
+			<li data-value='Candle'>Candle</li>
+			<li data-value='Column'>Column</li>
 		</ul>
 	</div>
 </template>
