--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -15,7 +15,7 @@
 	</div>
 </template>
 <template class='financialChartIndicatorMenu'>
-	<button class='financialChartIndicatorMenuDropDownButton'>Indicator</button>
+	<button class='financialChartIndicatorMenuDropDownButton'>Indicators</button>
 	<div class='financialChartIndicatorMenuDropDownMenu'>
     <ul>
         <li data-value='FinancialOverlayType'>Overlays
