add financial chart legend

--- a/src/html/structure/modules/infragistics.ui.financialchart.templates.html
+++ b/src/html/structure/modules/infragistics.ui.financialchart.templates.html
@@ -1,6 +1,7 @@
 <template class='financialChartMainGrid'>
 	<div class='financialChartMainGrid'>
 		<div class='financialChartToolbar'></div>
+		<div class='financialChartLegend'></div>
 		<div class='financialChartPrice'></div>
 		<div class='financialChartIndicators'></div>
 		<div class='financialChartVolume'></div>
