--- a/tests/unit/tree/tests.htm
+++ b/tests/unit/tree/tests.htm
@@ -270,6 +270,7 @@
 						dataSource: results2,
 						loadOnDemand: true,
 						checkboxMode: 'triState',
+						animationDuration: 0,
 						bindings: {
 							textKey: 'Text',
 							valueKey: 'Value',
@@ -1425,8 +1426,11 @@
 				equal(data[binding.textKey], 'Unit testing', 'Text in the data does not match');
 				ok(typeof(data[binding.childDataProperty]) === 'object', 'Child data is not an object.');
 			});
-			test(testId_4, function () {
+			test(testId_4, 67, function () {
 				var nodeCount = $('#tree4').find('li[data-role=node]').length;
+				$('#tree4').bind('igtreenodeexpanded', function () {
+					ok(true);
+				});
 				equal(nodeCount, 5, 'A different than the expected number of nodes rendered initially');
 				raises(function () {$('#tree4').igTree('toggleCheckstate');}, function (err) { return err.message === $.ig.Tree.locale.incorrectNodeObject; }, 'An error was not correctly thrown when calling toggleCheckstate without a parameter');
 				raises(function () {$('#tree4').igTree('toggle');}, function (err) { return err.message === $.ig.Tree.locale.incorrectNodeObject; }, 'An error was not correctly thrown when calling toggle without a parameter');
@@ -1519,6 +1523,7 @@
 				ok($('#tree4').igTree('isSelected', $('#tree4').igTree('nodeByPath', '3_0_1')), 'API returned not selected');
 				nodeCount = $('#tree4').find('li[data-role=node]').length;
 				equal(nodeCount, 27, 'A different than the expected number of nodes rendered after expand');
+				$('#tree4').unbind('igtreenodeexpanded');
 			});
 			test(testId_5, function () {
 				var node = $('#tree5').igTree('nodeByPath', '0'), anchor = node.children('a');
